# sensation

./: LICENSE  README.md  pyproject.toml
DOC/: REMOTE_I2C.md  dev.md
examples/: usage.py
src/sensation/: __init__.py  common.py
src/sensation/dfrobot/: DFRobot_RaspberryPi_A02YYUW.py
src/sensation/ld2410c/: __init__.py
src/sensation/remote_i2c/: board.py  smbus2.py
src/sensation/sen0311/: __init__.py
src/sensation/sen0395/: __init__.py
